better errors, added submit button

--- a/static/form.html
+++ b/static/form.html
@@ -3,6 +3,7 @@
 <h2>URL not found</h2>
 {{end}}
 <form method="post">
-    <label>URL: </label>
-    <input type="text" name="url">
+    <label for="url">URL: </label>
+    <input id="url" type="text" name="url">
+    <input type="submit" value="Submit">
 </form>
